--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
@@ -34,7 +34,7 @@
             errorClass: 'is-invalid',
             errorPlacement: function (error, element) {
                 switch (element.attr("name")) {
-                    case "CEP":
+                    case "cep":
                         error.appendTo(element.parents('#divCEP'));
                         break;
                     default:
@@ -64,7 +64,16 @@
             $(this).prop("disabled", true);
             event.preventDefault();
 
+            if ($("#cep").val().length == 0) {
+                $(".invalidCepJQ").show();
+            }
+            else {
+                $(".invalidCepJQ").hide();
+            }
+
             if ($("#FormAgendamento").valid() == true) {
+                $(".agendamentoJQ").addClass("loading");
+
                 $.ajax({
                     type: "POST",
                     url: "/cms/@portal.Diretorio/AgendamentoIntermodal/SalvarImportacao",
@@ -104,89 +113,100 @@
 
                             $("#hdfTipoFormulario").val('normal');
 
-                            $("#mensagem").text('');
+                            $("#mensagem").html('');
                         }
                         else {
                             $("#propostaComercial").addClass('is-invalid');
                             $("#numeroBooking").addClass('is-invalid');
                             $("#numeroBl").addClass('is-invalid');
 
-                            $("#mensagem").text(data.msg);
-                            window.scrollTo(0, 0);
+
+                            $("#mensagem").html('');
+                            $("#mensagem").html('<div class="alert alert-danger" role="alert">' + data.msg + '</div>');
+                            $('html, body').animate({ scrollTop: 0 }, 800);
                         }
+
+                        $(".agendamentoJQ").removeClass("loading");
                     },
                     error: function (data) {
-
+                        $(".agendamentoJQ").removeClass("loading");
                     }
                 });
             }
         }
         else {
-            $("#mensagem").text("Os anexos de Declaração de Importação, GARE e BL são obrigatórios.");
-            window.scrollTo(0, 0);
+            $("#mensagem").html('');
+            $("#mensagem").html('<div class="alert alert-danger" role="alert">Os anexos de Declaração de Importação, GARE e BL são obrigatórios.</div>');
+            $('html, body').animate({ scrollTop: 0 }, 800);
         }
     });
 
 
     //CLICK NO BOTAO SALVAR IMPORTAÇÃO COM DTA
     $(".btnSalvarDtaJQ").on("click", function (event) {
+        if ($("#hdfFileDeclaracaoImportacao").val() == "1" && $("#hdfFileGuiaArrecadacao").val() == "1" && $("#hdfFileBl").val() == "1") {
+            $(this).prop("disabled", true);
+            event.preventDefault();
 
-        $(this).prop("disabled", true);
-        event.preventDefault();
+            if ($("#FormAgendamento").valid() == true) {
+                $(".agendamentoJQ").addClass("loading");
 
-        if ($("#FormAgendamento").valid() == true) {
-             $.ajax({
-                type: "POST",
-                 url: "/cms/@portal.Diretorio/AgendamentoIntermodal/SalvarImportacao",
-                 data: {
-                     Nome: $("#nome").val(),
-                     Email: $("#email").val(),
-                     PropostaComercial: $("#propostaComercial").val(),
-                     NumeroBooking: $("#numeroBooking").val(),
-                     NumeroBL: $("#numeroBl").val(),
-                     CEP: $("#cep").val(),
-                     CNPJ: $("#cnpj").val(),
-                     Endereco: $("#endereco").val(),
-                     Complemento: $("#complemento").val(),
-                     Bairro: $("#bairro").val(),
-                     Cidade: $("#cidade").val(),
-                     Estado: $("#estado").val(),
-                     guid: $("#hdfGuid").val()
-                 },
-                success: function (data) {
-                    if (data.success == true) {
-                        $("#nome").prop("disabled", true);
-                        $("#email").prop("disabled", true);
-                        $("#propostaComercial").prop("disabled", true);
-                        $("#numeroBooking").prop("disabled", true);
-                        $("#numeroBl").prop("disabled", true);
-                        $("#cep").prop("disabled", true);
-                        $("#cnpj").prop("disabled", true);
-                        $("#complemento").prop("disabled", true);
-                        $("#endereco").prop("disabled", true);
-                        $("#bairro").prop("disabled", true);
-                        $("#cidade").prop("disabled", true);
-                        $("#estado").prop("disabled", true);
-                        $("#divSalvar").fadeOut("slider");
-                        $("#codigoImportar").val(data.codigo);
+                $.ajax({
+                    type: "POST",
+                    url: "/cms/@portal.Diretorio/AgendamentoIntermodal/SalvarImportacao",
+                    data: {
+                        Nome: $("#nome").val(),
+                        Email: $("#email").val(),
+                        PropostaComercial: $("#propostaComercial").val(),
+                        NumeroBooking: $("#numeroBooking").val(),
+                        NumeroBL: $("#numeroBl").val(),
+                        CEP: $("#cep").val(),
+                        CNPJ: $("#cnpj").val(),
+                        Endereco: $("#endereco").val(),
+                        Complemento: $("#complemento").val(),
+                        Bairro: $("#bairro").val(),
+                        Cidade: $("#cidade").val(),
+                        Estado: $("#estado").val(),
+                        guid: $("#hdfGuid").val()
+                    },
+                    success: function (data) {
+                        if (data.success == true) {
+                            $("#nome").prop("disabled", true);
+                            $("#email").prop("disabled", true);
+                            $("#propostaComercial").prop("disabled", true);
+                            $("#numeroBooking").prop("disabled", true);
+                            $("#numeroBl").prop("disabled", true);
+                            $("#cep").prop("disabled", true);
+                            $("#cnpj").prop("disabled", true);
+                            $("#complemento").prop("disabled", true);
+                            $("#endereco").prop("disabled", true);
+                            $("#bairro").prop("disabled", true);
+                            $("#cidade").prop("disabled", true);
+                            $("#estado").prop("disabled", true);
+                            $("#divSalvar").fadeOut("slider");
+                            $("#codigoImportar").val(data.codigo);
 
-                        $("#divCarga").fadeIn("slide");
+                            $("#divCarga").fadeIn("slide");
 
-                        $("#hdfTipoFormulario").val('dta');
+                            $("#hdfTipoFormulario").val('dta');
+                        }
+                        else {
+                            $("#propostaComercial").addClass('is-invalid');
+                            $("#numeroBooking").addClass('is-invalid');
+                            $("#numeroBl").addClass('is-invalid');
+
+                            $("#mensagem").html('');
+                            $("#mensagem").html('<div class="alert alert-danger" role="alert">' + data.msg + '</div>');
+                            $('html, body').animate({ scrollTop: 0 }, 800);
+                        }
+
+                        $(".agendamentoJQ").removeClass("loading");
+                    },
+                    error: function (data) {
+                        $(".agendamentoJQ").removeClass("loading");
                     }
-                    else {
-                        $("#propostaComercial").addClass('is-invalid');
-                        $("#numeroBooking").addClass('is-invalid');
-                        $("#numeroBl").addClass('is-invalid');
-
-                        $("#mensagem").text(data.msg);
-                        window.scrollTo(0, 0);
-                    }
-                },
-                error: function (data) {
-
-                }
-            });
+                });
+            }
         }
     });
 
@@ -203,6 +223,8 @@
         $("#divRegistrosCargas").hide();
         $(".sucessoJQ").hide();
         //$(".btnAgendarJQ").hide();
+
+        $(".invalidCepJQ").hide();
 
     }
 
@@ -225,7 +247,7 @@
                     return false;
                 }
                 else {
-                    $("#mensagem").text('');
+                    $("#mensagem").html('');
                     $("#propostaComercial").val('');
                     $("#propostaComercial").addClass('is-invalid');
                     $('#existPropostaComercial').remove();
@@ -252,7 +274,7 @@
                     return false;
                 }
                 else {
-                    $("#mensagem").text('');
+                    $("#mensagem").html('');
                     $("#numeroBooking").val('');
                     $("#numeroBooking").addClass('is-invalid');
                     $('#existNumeroBooking').remove();
@@ -279,7 +301,7 @@
                     return false;
                 }
                 else {
-                    $("#mensagem").text('');
+                    $("#mensagem").html('');
                     $("#numeroBl").val('');
                     $("#numeroBl").addClass('is-invalid');
                     $('#existNumeroBl').remove();
@@ -299,13 +321,13 @@
              data: { Proposta: proposta, Booking: booking, NumeroBl: '' },
             success: function (data) {
                 if (data.success == true) {
-                    $("#mensagem").text('');
+                    $("#mensagem").html('');
                     $('#existNumeroBooking').remove();
 
                     return false;
                 }
                 else {
-                    $("#mensagem").text('');
+                    $("#mensagem").html('');
                     $("#numeroBooking").val('');
 
                     $("#numeroBooking").parent().append("<span id='existNumeroBooking'><label id='NumeroBooking-error' class='is-invalid' for='numeroBooking'>O campo Proposta Comercial: " + proposta + " e  Número Booking: " + booking + " são inválidos.</label><span>");
@@ -324,12 +346,12 @@
              data: { Proposta: proposta, Booking: '', NumeroBl: numeroBl },
             success: function (data) {
                 if (data.success == true) {
-                    $("#mensagem").text('');
+                    $("#mensagem").html('');
                     $('#existNumeroBl').remove();
                     return false;
                 }
                 else {
-                    $("#mensagem").text('');
+                    $("#mensagem").html('');
                     $("#numeroBl").val('');
 
                     $("#numeroBl").parent().append("<span id='existNumeroBl'><label id='NumeroBl-error' class='is-invalid' for='numeroBl'>O campo Proposta Comercial: " + proposta + " e  Número BL: " + numeroBl + " são inválidos.</label><span>");
