--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarModal.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarModal.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-cancel btnNaoExcluirJQ" data-dismiss="modal">@T("Cancelar")</button>
-                <button type="button" class="btn btn-delete btnExcluirJQ">@T("Excluir")</button>
+                <button type="button" class="btn btn-delete btnExcluirJQ" data-dismiss="modal">@T("Excluir")</button>
             </div>
             <div class="mensagemExclusao">
                 <p>@T("Registro excluído com sucesso").</p>
