--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -139,7 +139,7 @@
                     $("#CodigoExcluir").val('');
                     $(".divExclusao").fadeOut("slide");
                     $('.mensagemExclusao').fadeIn("slide");
-                    $('#modalConfirmacao').modal('hide');
+                    //$('#modalConfirmacao').modal('hide');
 
                     if ($("#divRegistrosCargas tr").length == 0) {
                         $(".btnAgendarJQ").hide();
